<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SoundRemote</string>
    <string name="empty_string" translatable="false" />
    <string name="empty_string_attribution_label" translatable="false">Default access</string>

    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="navigate_up">Navigate up</string>
    <string name="app_info">App info</string>

    <!--Permission-->
    <string name="permission_caption">Permission</string>
...
    <string name="connect_caption">Connect</string>
    <string name="disconnect_caption">Disconnect</string>
    <string name="server_address">Server address</string>
    <string name="navigation_menu" tools:override="true">Navigation menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_edit_hotkeys">Edit hotkeys</string>
    <string name="action_events">Events</string>
    <string name="action_recent_servers">Show recent servers</string>
    <string name="recent_servers_title">Recent servers</string>
    <string name="action_mute_app">Mute application</string>
    <string name="action_unmute_app">Unmute application</string>

...
    <string name="notification_disconnected_text">Disconnected 🔴</string>
    <string name="notification_muted_text">Muted 🔇</string>

    <!--Hotkeys-->
    <string name="hotkey_list_title">Hotkeys</string>
    <string name="hotkey_delete_confirmation">Delete hotkey?</string>
    <string name="action_hotkey_create">Create</string>
    <string name="drag_handle_description">Drag handle</string>
    <string name="hotkey_actions_menu_description">Actions menu</string>

    <!--Hotkey edit-->
    <string name="hotkey_create_title">Create hotkey</string>
    <string name="hotkey_edit_title">Edit hotkey</string>
    <string name="error_invalid_key">Enter latin letter or digit</string>
    <string name="win_checkbox_label" translatable="false">Win</string>
    <string name="ctrl_checkbox_label" translatable="false">Ctrl</string>
    <string name="shift_checkbox_label" translatable="false">Shift</string>
    <string name="alt_checkbox_label" translatable="false">Alt</string>
    <string name="hotkey_name_edit_label">Name</string>
    <string name="hotkey_name_edit_placeholder">Leave blank to autofill</string>
    <string name="hotkey_key_edit_label">Key(required)</string>
    <string name="hotkey_key_edit_hint">a–z or 0–9</string>

    <!--Hotkey select-->
    <string name="hotkey_select_title">Select hotkey</string>
    <string name="hotkey_select_none">No hotkey</string>

...
